[package]
name = "base16_color_scheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
lazy_static = "1.4.0"
nom = "7.1.3"
ramhorns = "0.14.0"
regex = "1.7.2"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
