[package]
name = "base16_color_scheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
nom = "7.1.3"
ramhorns = { version = "0.14.0", default-features = false }
serde = { version = "1.0.158", features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.9.19"
